--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,11 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+				<li><a href="/about">About</a></li>
+		        	<li><a href="/schedule">Schedule</a></li>
+	        		<li><a href="/registration">Registration</a></li>
+	        		<li><a href="/directionsandparking">Directions and Parking</a></li>
+				<li><a href="/sponsors">Sponsors</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
